--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,19 +9,7 @@
 
             {{ range .Data.Pages }}
             {{"<!-- single blog post -->" | safeHTML}}
-            <article class="col-lg-4 col-md-6 col-12 clearfix wow fadeInUp" data-wow-duration="500ms">
-                <div class="post-block">
-                    <div class="media-wrapper">
-                        {{ with .Params.image }}<img src="{{ . | absURL }}" alt="post-image" class="img-fluid">{{ end }}
-                    </div>
-
-                    <div class="content">
-                        <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-                        <p>{{ .Summary }}</p>
-                        <a class="btn btn-transparent" href="{{ .Permalink }}">{{ i18n "readMore" }}</a>
-                    </div>
-                </div>
-            </article>
+            {{ .Render "article" }}
             {{"<!-- /single blog post -->" | safeHTML}}
             {{ end }}
         </div>
