Fix color for pre

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ p {
   scroll-behavior: smooth;
 }
 
+pre {
+  color: #afbac4;
+}
+
 /*=================================================================
   Basic Setup
 ==================================================================*/
