--- a/layouts/author/terms.html
+++ b/layouts/author/terms.html
@@ -17,7 +17,7 @@
                         <div class="content">
                         <figure>
                             {{ if .Params.photo }}
-                            <img class="rounded-circle img-fluid pt-2" src="{{.Params.Photo}}">
+                            <img class="rounded-circle img-fluid pt-2" src="{{.Params.photo}}">
                             {{else if .Params.email}}
                             <img class="rounded-circle img-fluid pt-2" src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=128&pg&d=identicon">
                             {{ end }}
