add fromspree as suplier for the email

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -28,8 +28,11 @@
 
             {{"<!-- Contact Form -->" | safeHTML}}
             <div class="col-lg-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
+            {{ if eq .Site.Data.contact.provider "formspree" }}
+                <form id="contact-form" class="form-meghna" method="post" action="https://formspree.io/{{ .Site.Data.contact.email }}" role="form">
+            {{else}}
                 <form id="contact-form" class="form-meghna" method="post" action="sendmail.php" role="form">
-
+            {{ end }}
                     <input name="e-mail" type="text" id="e-mail" autocomplete="off">
 
                     <div class="form-group">
