--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,5 +28,9 @@
     {{"<!-- Main Stylesheet -->"|safeHTML}}
     {{ $styles := resources.Get "css/style.css" | minify}}
     <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}" media="screen">
+    {{ "<!-- Custom CSS -->" | safeHTML }}
+    {{ range .Site.Params.custom_css }}
+    <link rel="stylesheet" href="{{ . | absURL }}">
+    {{ end }}
 
 </head>
