--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,12 +1,13 @@
 {{ if .Site.Data.contact.enable }}
 {{"<!-- Start Contact Us -->" | safeHTML}}
 <section id="contact-us" class="contact-us section-bg">
-    <div class="container">
+    <div class="container pb-5">
         <div class="row">
             <div class="col-lg-12">
                 {{"<!-- section title -->" | safeHTML}}
                 <div class="title text-center wow fadeIn" data-wow-duration="500ms">
-                    <h2>{{ with .Site.Data.contact.heading }} {{ . }} {{ end }} <span class="color">{{ with .Site.Data.contact.headingSpan }} {{ . }} {{ end }}</span></h2>
+                    <h2>{{ with .Site.Data.contact.heading }} {{ . }} {{ end }} <span
+                            class="color">{{ with .Site.Data.contact.headingSpan }} {{ . }} {{ end }}</span></h2>
                     <div class="border-meghna"></div>
                 </div>
             </div>
@@ -31,44 +32,39 @@
                 <form id="contact-form" class="form-meghna" method="post" action="sendmail.php" role="form">
 
                     <input name="e-mail" type="text" id="e-mail" autocomplete="off">
-
                     <div class="form-group">
                         <input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
                     </div>
-
                     <div class="form-group">
                         <input type="email" placeholder="Your Email" class="form-control" name="email" id="email">
                     </div>
-
                     <div class="form-group">
                         <input type="text" placeholder="Subject" class="form-control" name="subject" id="subject">
                     </div>
-
                     <div class="form-group">
-                        <textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>
+                        <textarea rows="6" placeholder="Message" class="form-control" name="message"
+                            id="message"></textarea>
                     </div>
-
                     <div id="mail-success" class="success">
                         Thank you. The Mailman is on His Way :)
                     </div>
-
                     <div id="mail-fail" class="error">
                         Sorry, don't know what happened. Try later :(
                     </div>
-
                     <div id="cf-submit">
                         <input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
                     </div>
-
                 </form>
             </div>
-
-    {{"<!-- Google Map -->" | safeHTML}}
-    <div class="google-map">
-        <div id="map-canvas" {{ with .Site.Data.contact.mapLatitude }} data-latitude="{{ . }}" {{ end }}
-        {{ with .Site.Data.contact.mapLongitude }} data-longitude="{{ . }}" {{ end }}></div>
+        </div>
     </div>
 
+    {{ if .Site.Data.contact.enable_maps }}
+    {{"<!-- Google Map -->" | safeHTML}}
+    <div class="google-map">
+        <div id="map-canvas" {{ with .Site.Data.contact.mapLatitude }} data-latitude="{{ . }}" {{ end }} {{ with .Site.Data.contact.mapLongitude }} data-longitude="{{ . }}" {{ end }}></div>
+    </div>
+    {{ end }}
 </section>
 {{"<!-- /contact -->" | safeHTML}}
 {{ end }}
