--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -35,7 +35,7 @@
 
 {{ if .Site.Data.about2.enable }}
 {{"<!-- about 2 -->" | safeHTML}}
-<section class="section section-bg about-2 padding-0">
+<section class="section section-bg about-2 padding-0" id="about">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6 padding-0 ">
