Update team section

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -5,8 +5,8 @@
 {{"<!-- Start Our Team -->" | safeHTML}}
 <section id="team" class="section">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 justify-content-center">
+    <div class="row justify-content-center">
+      <div class="col-lg-12">
         {{"<!-- section title -->" | safeHTML}}
         <div class="title text-center wow fadeInUp" data-wow-duration="500ms">
           <h2>{{ with .title }} {{ index (split . " ") 0 }} {{ end }}<span class="color">
