--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,46 +404,15 @@ a:hover {
   margin-bottom: 0;
 }
 
-.navigation .logo {
-  padding: 0;
-}
-
-.navigation .navigation-menu li a.active {
+.navbar-dark .navbar-nav .active>.nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show>.nav-link {
   color: #57cbcc;
-}
-
-.navigation .navigation-menu li a {
-  font-size: 16px;
-  color: #737f8a;
-}
-
-.navigation .navigation-menu li a:hover,
-.navigation .navigation-menu li a:focus {
-  background: transparent;
-  color: #57cbcc;
-}
-
-.navigation .navbar-toggler {
-  color: rgba(255, 255, 255, .5);
-  border-color: rgba(255, 255, 255, .1);
-  border-radius: 0;
-}
-
-.navigation .navbar-collapse {
-  padding: 10px;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
-  border-top: 5px solid transparent;
-}
-
-@media (min-width: 768px) {
-  .navigation .navbar-collapse {
-    box-shadow: none;
-    border-top: none;
-  }
 }
 
 .navbar-toggler:focus {
-  outline-color: #57cbcc;
+  outline: 0;
 }
 
 .bg-1 {
@@ -2299,4 +2268,5 @@ figcaption {
   padding: 10px;
   display: block;
 }
+
 /*# sourceMappingURL=maps/style.css.map */
