--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,7 +459,7 @@ a:hover {
 
 .hero-area {
   background-size: cover;
-  height: 100vh;
+  height: 200vh;
   position: relative;
   display: flex;
   justify-content: center;
@@ -468,7 +468,7 @@ a:hover {
 
 .hero-area:before {
   content: '';
-  background: rgba(0, 0, 0, 0.63);
+  /*background: rgba(0, 0, 0, 0.63);*/
   position: absolute;
   top: 0;
   right: 0;
