Color and text size change of Banner main text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,8 +501,8 @@ div.service-block.text-center {
 }
 
 .hero-area .block h1 {
-  font-size: 90px;
-  color: #fff;
+  font-size: 54px;
+  color: #009999;
   text-transform: capitalize;
   font-weight: 700;
   margin-bottom: 20px;
