--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -50,7 +50,13 @@
 							data-lightbox="image-1">
 							<i class="ti-search"></i>
 						</a>
-						<h4 class="mt-3"><a href="{{ .link | safeURL }}">{{ .name }}</a></h4>
+						<h4 class="mt-3">
+							{{ if or (eq .link "#") (eq .link "") }}
+							{{ .name }}
+							{{ else }}
+							<a href="{{ .link | safeURL }}">{{ .name }}</a>
+							{{ end }}
+						</h4>
 						<p>{{ .content | markdownify }}</p>
 					</div>
 				</div>
