create support for custom css

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,6 +19,9 @@
 	{{ $styles := resources.Get "css/style.css" | minify}}
 	<link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
 
+  {{"<!-- Custom stylesheet - for your changes -->" |safeHTML}}
+  <link rel="stylesheet" href="{{ "css/custom.css" | relURL}} " media="screen">
+
 	{{ "<!--Favicon-->" | safeHTML }}
 	<link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
 	<link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
