Wall Banner last edit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -673,7 +673,7 @@ div.service-block.text-center {
 
 .call-to-action h2 {
   font-weight: 700;
-  color: #444;
+  color: #01ffff;
 }
 
 .call-to-action p {
