Blog title changed to Products

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -678,7 +678,7 @@ div.service-block.text-center {
 
 .call-to-action p {
   font-size: 20px;
-  color: #202326;
+  color: ##01ffff;
 }
 
 .call-to-action .btn-main {
