Blog title changed to Products

--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -19,7 +19,7 @@
 
 			<div class="all-post text-center col-lg-12">
 				<a class="btn btn-main"
-					href="{{ `blog` | absLangURL }}">{{ i18n "viewAllSOLUTIONS" }}</a>
+					href="{{ `blog` | absLangURL }}">{{ i18n "viewAllPost" }}</a>
 			</div>
 		</div>
 	</div>
