--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -678,7 +678,7 @@ div.service-block.text-center {
 
 .call-to-action p {
   font-size: 20px;
-  color: #01ffff;
+  color: #2c9d9d;
 }
 
 .call-to-action .btn-main {
