--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -43,8 +43,8 @@
 	</p>
 	<p>
 		<label>Your Role: <select name="role[]" multiple>
-			<option value="leader">Leader</option>
-			<option value="follower">Follower</option>
+			<option value="Client">Leader</option>
+			<option value="Freelancer">Follower</option>
 		</select></label>
 	</p>
 	<p>
