--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -4,57 +4,56 @@
 {{ with $data.contact.contact }}
 {{"<!-- Start Contact Us -->" | safeHTML}}
 <section id="contact" class="contact-us section-bg">
-	<div class="container pb-5">
-		<div class="row">
-			<div class="col-lg-12">
-				{{"<!-- section title -->" | safeHTML}}
-				<div class="title text-center wow fadeIn" data-wow-duration="500ms">
-					<h2>{{ with .title }} {{ index (split . " ") 0 }} {{ end }}<span class="color">
+    <div class="container pb-5">
+        <div class="row">
+            <div class="col-lg-12">
+                {{"<!-- section title --> " | safeHTML}}
+                <div class="title text-center wow fadeIn" data-wow-duration="500ms">
+                    <h2>{{ with .title }} {{ index (split . " ") 0 }} {{ end }}<span class="color">
 						{{ with .title }} {{ index (split . " ") 1 }} {{ end }}</span></h2>
-					<div class="border-meghna"></div>
+                    <div class="border-meghna"></div>
+                </div>
+            </div>
+            {{"<!-- /section title --> " | safeHTML}}
+
+            {{"<!-- Contact Details --> " | safeHTML}}
+            <div class="contact-info col-lg-6 wow fadeInUp" data-wow-duration="500ms">
+                <h3>{{ .subtitle | markdownify }}</h3>
+                <p> {{ .content | markdownify }} </p>
+                <div class="contact-details">
+                    {{ range .contact_details }}
+                    <div class="con-info clearfix">
+                        <i class="{{ .icon }}"></i>
+                        <span>{{ .info }}</span>
+                    </div>
+                    {{ end }}
+                </div>
+            </div>
+
+            {{"<!-- Contact Form --> " | safeHTML}}
+
+			<form id="contact-form" class="form-meghna" method="post"  data-netlify="true" role="form" data-netlify-recaptcha="true">
+				<input name="e-mail" type="text" id="e-mail" autocomplete="off">
+				<div class="form-group">
+					<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
 				</div>
-			</div>
-			{{"<!-- /section title -->" | safeHTML}}
-
-			{{"<!-- Contact Details -->" | safeHTML}}
-			<div class="contact-info col-lg-6 wow fadeInUp" data-wow-duration="500ms">
-				<h3>{{ .subtitle | markdownify }}</h3>
-				<p> {{ .content | markdownify }} </p>
-				<div class="contact-details">
-					{{ range .contact_details }}
-					<div class="con-info clearfix">
-						<i class="{{ .icon }}"></i>
-						<span>{{ .info }}</span>
-					</div>
-					{{ end }}
+				<div class="form-group">
+					<input type="email" placeholder="Your Email" class="form-control" name="email" id="email">
 				</div>
-			</div>
+				<div class="form-group">
+					<input type="text" placeholder="Subject" class="form-control" name="subject" id="subject">
+				</div>
+				<div class="form-group">
+					<textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>
+				</div>
+				<div id="cf-submit">
+					<button type="submit" id="contact-submit" class="btn btn-transparent btn-block" value="Submit">{{ i18n "submit" }}</button>
+				</div>
+			</form>
+            {{"<!-- /contact --> " | safeHTML}}
+            {{ end }}
+            {{ end }}
+        </div>
+    </div>
+</section>
 
-			{{"<!-- Contact Form -->" | safeHTML}}
-			<div class="col-lg-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-
-
-<form name="contact" method="POST" data-netlify="true">
-	<p>
-		<label>Your Name: <input type="text" name="name" /></label>
-	</p>
-	<p>
-		<label>Your Email: <input type="email" name="email" /></label>
-	</p>
-	<p>
-		<label>Your Role: <select name="role[]" multiple>
-			<option value="Client">Leader</option>
-			<option value="Freelancer">Follower</option>
-		</select></label>
-	</p>
-	<p>
-		<label>Message: <textarea name="message"></textarea></label>
-	</p>
-	<p>
-		<button type="submit">Send</button>
-	</p>
-</form>
-
-{{"<!-- /contact -->" | safeHTML}}
-{{ end }}
-{{ end }}
