--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -29,12 +29,9 @@
                     {{ end }}
                 </div>
             </div>
-            <p>Tell us about your project: <a href="mailto:hello@paisley.com?cc=jahan@paisley.com.com&subject=Mail">Send Email</a>
 
-            {{"<!-- Contact Form --> " | safeHTML}}
+            <p>Tell us about your project: <a href="mailto:hello@paisley.com?cc=jahan@paisley.com.com&subject=Mail">hello@paisley.com</a>
 
-
-			</form>
             {{ end }}
             {{ end }}
             <html>
