fixed contact info

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
 
-            <p>Tell us about your project: <a href="mailto:hello@paisley.com?cc=jahan@paisley.com.com&subject=Mail">hello@paisley.com</a>
+            <p>Tell us about your project: <a href="mailto:hello@paisley.digital?cc=jahan@paisley.digital&subject=Help Us with Our Project">hello@paisley.digital</a>
 
             {{ end }}
             {{ end }}
