Improve banner, navigation and whyus pages

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -18,7 +18,7 @@
 
 			{{ range .about_item }}
 			{{"<!-- About item -->" | safeHTML}}
-			<div class="col-lg-3 text-center wow fadeInUp" data-wow-duration="500ms">
+			<div class="col-md-6 col-lg-3 text-center wow fadeInUp" data-wow-duration="500ms">
 				<div class="block">
 					<div class="icon-box">
 						{{with .icon}}<i class="{{ . }}"></i>{{ end }}
