--- a/layouts/partials/preloader.html
+++ b/layouts/partials/preloader.html
@@ -2,7 +2,7 @@
 {{ "<!-- preloader start -->" | safeHTML }}
 <div class="preloader">
   {{ with .Site.Params.preloader.preloader }}
-  <img src="{{ . | absURL }}" alt="preloader">
+  <img width="300px" src="{{ . | absURL }}" alt="preloader">
   {{ end }}
 </div>
 {{ "<!-- preloader end -->" | safeHTML }}
