--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -30,24 +30,11 @@
                 </div>
             </div>
 
-            <p>Tell us about your project: <a href="mailto:hello@paisley.digital?cc=jahan@paisley.digital&subject=Help Us with Our Project">hello@paisley.digital</a>
+            <p>Tell us about your project: <a
+                    href="mailto:hello@paisley.digital?cc=jahan@paisley.digital&subject=Help Us with Our Project">hello@paisley.digital</a>
 
-            {{ end }}
-            {{ end }}
-                <style>
-                    .main-content {
-                        width: 60%;
-                        height: 400px;
-                        padding: 20px;
-                        line-height: 28px;
-                    }
-                    footer {
-                        padding: 10px 20px;
-                    }
-                    a {
-                        color: #00aaff;
-                    }
-                </style>
+                {{ end }}
+                {{ end }}
 
         </div>
     </div>
